compiler/tests/should-fail/TooManyArguments2.via
/* IncorrectNumberOfArgumentsError */

fun main() {
    val x = Array[int](5);
    assert x[0, 0] == 0;
}
